# FluxDown

./: AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pubspec.yaml
.github/scripts/: triage.py
.github/workflows/: build-extension.yml  build-windows.yml  release.yml
android/app/: build.gradle.kts
fluxDown/: package.json  wxt.config.ts
fluxDown/entrypoints/: background.ts  fetch-interceptor.ts  resource-detector.content.ts
fluxDown/entrypoints/popup/: index.html  main.ts
fluxDown/entrypoints/resource-ui.content/: index.ts  style.css
fluxDown/utils/: native-messaging.ts  resource-store.ts  resource-types.ts
fluxDown/utils/locales/: en.ts  zh-CN.ts
ios/Runner/: AppDelegate.swift  Info.plist
lib/: main.dart
lib/src/i18n/: translations.dart
lib/src/mobile/: mobile_app.dart  mobile_shell.dart  mobile_ui.dart
lib/src/models/: download_controller.dart  (+2 more)
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
native/cli/: Cargo.toml
native/cli/src/: client.rs  config.rs  exit.rs  format.rs  lib.rs  main.rs
native/engine/: Cargo.toml
native/hub/: Cargo.toml
native/server/: Cargo.toml
promotion/: README.md
promotion/awesome-selfhosted/: fluxdown.yml
promotion/mcp/: server.json
promotion/unraid/: ca_profile.xml  fluxdown.xml
scripts/: build_arch_pkg.sh  release_tag.py  send_notify.py
web/: index.html  package.json
web/src/: design.css  index.css  main.tsx  router.tsx
website/: docker-compose.yml
website/public/: openapi.json
windows/runner/: flutter_window.cpp  flutter_window.h
(+147 files in other folders)
